chore: Update autovalue configs